{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 171,
  "lineage": "3aacc37c-f773-2d3a-2c91-8000d7edc1cb",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713105348:vpc/vpc-0f91e983866d89652",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c093227bb76fce9b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-08f3da778aa7d439e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "isDefault",
                "values": [
                  "true"
                ]
              }
            ],
            "id": "vpc-0f91e983866d89652",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0651621c151059ab7",
            "owner_id": "339713105348",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "data",
      "type": "aws_route_table",
      "name": "accepter_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713105348:route-table/rtb-0651621c151059ab7",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-00b37f86f440892d2",
                "route_table_id": "rtb-0651621c151059ab7",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-0651621c151059ab7",
            "owner_id": "339713105348",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0651621c151059ab7",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0c341552e55257cf5"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2a9556801c04062",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0f91e983866d89652"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "data",
      "type": "aws_route_table",
      "name": "requester_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713105348:route-table/rtb-001049e7d1708eb62",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-094a4e2917e7fb24f",
                "route_table_id": "rtb-001049e7d1708eb62",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-001049e7d1708eb62",
            "owner_id": "339713105348",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-001049e7d1708eb62",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.31.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0c341552e55257cf5"
              }
            ],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb35670c1aabbc11"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "data",
      "type": "aws_vpc",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713105348:vpc/vpc-0f91e983866d89652",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c093227bb76fce9b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-08f3da778aa7d439e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f91e983866d89652",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0651621c151059ab7",
            "owner_id": "339713105348",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "data",
      "type": "aws_vpc",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713105348:vpc/vpc-0bb35670c1aabbc11",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01d3482e6a904227b",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-08f3da778aa7d439e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb35670c1aabbc11",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-001049e7d1708eb62",
            "owner_id": "339713105348",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "custom-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "accepter_to_requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0651621c151059ab7179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0651621c151059ab7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0c341552e55257cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.peering.aws_vpc_peering_connection.peer",
            "module.peering.data.aws_route_table.accepter_main",
            "module.peering.data.aws_vpc.requester",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "requester_to_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-001049e7d1708eb623854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-001049e7d1708eb62",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0c341552e55257cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.peering.aws_vpc_peering_connection.peer",
            "module.peering.data.aws_route_table.requester_main",
            "module.peering.data.aws_vpc.accepter",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0c341552e55257cf5",
            "peer_owner_id": "339713105348",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-0f91e983866d89652",
            "region": "ap-southeast-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "peer-to-default"
            },
            "tags_all": {
              "Name": "peer-to-default"
            },
            "vpc_id": "vpc-0bb35670c1aabbc11"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713105348:internet-gateway/igw-03a22e50f63f02690",
            "id": "igw-03a22e50f63f02690",
            "owner_id": "339713105348",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "custom-vpc-igw"
            },
            "tags_all": {
              "Name": "custom-vpc-igw"
            },
            "vpc_id": "vpc-0bb35670c1aabbc11"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713105348:route-table/rtb-0fa8fc9bb6954fdbf",
            "id": "rtb-0fa8fc9bb6954fdbf",
            "owner_id": "339713105348",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a22e50f63f02690",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb35670c1aabbc11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063c912732725f07e",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0fa8fc9bb6954fdbf",
            "subnet_id": "subnet-0e5515c46649ae1c1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02246cc85c598d4be",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0fa8fc9bb6954fdbf",
            "subnet_id": "subnet-019d7a4582386baac"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030ccded7ecd685e5",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0fa8fc9bb6954fdbf",
            "subnet_id": "subnet-0139be93f8377c80d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713105348:subnet/subnet-0e5515c46649ae1c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5515c46649ae1c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713105348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0bb35670c1aabbc11"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713105348:subnet/subnet-019d7a4582386baac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019d7a4582386baac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713105348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0bb35670c1aabbc11"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713105348:subnet/subnet-0139be93f8377c80d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0139be93f8377c80d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713105348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "public-subnet-3"
            },
            "tags_all": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-0bb35670c1aabbc11"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339713105348:vpc/vpc-0bb35670c1aabbc11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0021d2a93d2749929",
            "default_route_table_id": "rtb-001049e7d1708eb62",
            "default_security_group_id": "sg-05a40969f8ad50ed2",
            "dhcp_options_id": "dopt-08f3da778aa7d439e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb35670c1aabbc11",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001049e7d1708eb62",
            "owner_id": "339713105348",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "custom-vpc"
            },
            "tags_all": {
              "Name": "custom-vpc"
            }
          }
        }
      ]
    }
  ]
}